# seetheproperty-scraper

./: README.md  cli.py  house.py  pyproject.toml  us_state_abbrev.py
